[gd_scene format=3 uid="uid://x4s4wotu2c1t"]

[ext_resource type="Script" uid="uid://dio7ggddsmwf7" path="res://UI/options_menu.gd" id="1_7aenu"]

[node name="OptionsMenu" type="Control" unique_id=1149783176]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7aenu")

[node name="Music Slider" type="HSlider" parent="." unique_id=1996614833]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -8.0
offset_right = 228.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.5
step = 0.001

[node name="Music Player" type="AudioStreamPlayer" parent="." unique_id=1723597447]

[node name="Button" type="Button" parent="." unique_id=182707669]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -134.0
offset_top = -98.0
offset_right = 134.0
offset_bottom = -51.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 28
text = "Back to Main Menu"

[node name="Label" type="Label" parent="Button" unique_id=118445987]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = -5.8510003
anchor_right = 0.5
anchor_bottom = -5.8510003
offset_left = -121.5
offset_top = -25.00299
offset_right = 121.5
offset_bottom = 24.99701
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Music Volume"

[node name="ToggleFullscreen" type="Button" parent="." unique_id=822498487]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.0
offset_top = 178.0
offset_right = 133.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "Toggle Fullscreen"

[connection signal="value_changed" from="Music Slider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ToggleFullscreen" to="." method="_on_toggle_fullscreen_pressed"]
